# automotive_soa_unix_domain_socket_comparison

./: CMakeLists.txt  README.md  iox_automotive_proxy.cpp  iox_automotive_skeleton.cpp
include/: minimal_proxy.hpp  minimal_skeleton.hpp
include/owl/: types.hpp
include/owl/kom/: event_publisher.hpp  event_publisher.inl  event_publisher_uds.hpp  event_publisher_uds.inl  event_subscriber.hpp  event_subscriber.inl  event_subscriber_uds.hpp  event_subscriber_uds.inl  sample_allocatee_ptr.hpp  sample_pointer.hpp
